--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 		</nav>
 	</header>
 
+	<nav id="categories" class="py-3 flex gap-5 justify-center"></nav>
+
 
 	<script src="./js/video.js"></script>
 </body>
