--- a/index.html
+++ b/index.html
@@ -48,6 +48,26 @@
 		</section>
 	 </main>
 
+			<!-- Open the modal using ID.showModal() method -->
+		<button id="showModalData" class="btn" onclick="customModal.showModal()">open modal</button>
+		<dialog id="customModal" class="modal modal-bottom sm:modal-middle">
+		<div class="modal-box">
+			
+			<!-- custom create -->
+			 <div id="modal-content">
+
+			 </div>
+
+
+			<div class="modal-action">
+			<form method="dialog">
+				<!-- if there is a button in form, it will close the modal -->
+				<button class="btn">Close</button>
+			</form>
+			</div>
+		</div>
+		</dialog>
+
 
 	<script src="./js/video.js"></script>
 	<script src="./js/test.js"></script>
